Småfiks for bid-2

--- a/mock_data/kodeverk-nav-felles-hentkodeverk/kodeverk-LANDKODERISO2.json5
+++ b/mock_data/kodeverk-nav-felles-hentkodeverk/kodeverk-LANDKODERISO2.json5
@@ -111,7 +111,7 @@
   {"kode":"UA","term":"UKRAINA"},
   {"kode":"UG","term":"UGANDA"},
   {"kode":"DZ","term":"ALGERIE"},
-  {"kode":"UM","term":"MINDRE STILLEHAVSØYER"},
+  {"kode":"UM","term":"USAS YTRE SMÅØYER"},
   {"kode":"EC","term":"ECUADOR"},
   {"kode":"US","term":"USA"},
   {"kode":"EE","term":"ESTLAND"},
