Lagt til noen felter for utkast og fatting av vedtak FTRL

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
@@ -1,5 +1,8 @@
 {
   "behandlingsresultatTypeKode": "FASTSATT_LOVVALGSLAND",
+  "fritekstInnledning": "Fritekst innledning",
   "fritekstBegrunnelse": "Fritekst begrunnelse",
+  "fritekstEktefelle": "Fritekst ektefelle",
+  "fritekstBarn": "Fritekst barn",
   "vedtakstype": "FØRSTEGANGSVEDTAK"
 }
