Tilleggsfiler for bid/snr 19

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -452,7 +452,7 @@
     },
     {
       "oppgaveID": "174562067",
-      "sammensattNavn": "VAKKER GAPAHUK",
+      "sammensattNavn": "GUL BANAN",
       "fnr": "26096522249",
       "saksnummer": "19",
       "sakstype": {
