--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -13,7 +13,8 @@
     ],
     "ytterligereInformasjon": "fritekst",
     "soeknadsland": {
-      "landkoder": []
+      "landkoder": [],
+      "erUkjenteEllerAlleEosLand": false
     },
     "periode": {
       "fom": "2019-01-01",
