--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
@@ -102,7 +102,8 @@
     "soeknadsland": {
       "landkoder": [
         "DE"
-      ]
+      ],
+      "erUkjenteEllerAlleEosLand": false
     },
     "periode": {
       "fom": "2019-04-04",
