--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
@@ -90,7 +90,8 @@
     "soeknadsland": {
       "landkoder": [
         "SE"
-      ]
+      ],
+      "erUkjenteEllerAlleEosLand": false
     },
     "periode": {
       "fom": "2018-01-02",
