behandlingstema matcher kodeverk

--- a/mock_data/behandlinger-behandling/behandling-bid-19.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-19.json5
@@ -808,8 +808,8 @@
   },
   "oppsummering": {
     "behandlingstema": {
-      "kode": "TRYGDEAVTALE",
-      "term": "trygdeavtale"
+      "kode": "TRYGDEAVTALE_UK",
+      "term": "Yrkesaktiv i Storbritannia"
     },
     "behandlingsstatus": {
       "kode": "OPPRETTET",
