endre periode for godkjenning av unntaksperioder

--- a/mock_data/saksflyt-unntaksperioder-godkjenn/post/saksflyt-unntaksperioder-godkjenn-post.json5
+++ b/mock_data/saksflyt-unntaksperioder-godkjenn/post/saksflyt-unntaksperioder-godkjenn-post.json5
@@ -1,4 +1,8 @@
 {
   varsleUtland: true,
-  fritekst: "Fritekst"
+  fritekst: "Fritekst",
+  endretPeriode: {
+    fom: "2014-03-12",
+    tom: "2016-03-12"
+  }
 }
