oppdater mock_data til å passere tester

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -517,7 +517,10 @@
         "tom": "2019-08-31"
       },
       "prioritet": "HOY",
-      "land": ["NO"],
+      "land": {
+        "landkoder": ["NO"],
+        "erUkjenteEllerAlleEosLand": false
+      },
       "versjon": 1,
       "ansvarligID": "Z991001"
     }
