--- a/mock_data/journalforing-opprett/post/opprett-post.json5
+++ b/mock_data/journalforing-opprett/post/opprett-post.json5
@@ -25,9 +25,10 @@
       "fom": "2018-01-01",
       "tom": "2019-03-02"
     },
-    "land": [
-      "NO"
-    ]
+    "land": {
+      "landkoder": ["NO"],
+      "erUkjenteEllerAlleEosLand": false
+    }
   },
   "skalTilordnes": false,
   "ikkeSendForvaltingsmelding": false,
