--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,7 +58,7 @@ jobs:
         uses: ad-m/github-push-action@v0.5.0
         with:
           branch: master
-          github_token: ${{ secrets.MELOSYS_CI_TOKEN }}
+          github_token: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
 
       - name: publish to GPR
         run: npm publish
