Lagt til mer på ftrl-vedtakreqest

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
@@ -4,5 +4,6 @@
   "fritekstBegrunnelse": "Fritekst begrunnelse",
   "fritekstEktefelle": "Fritekst ektefelle",
   "fritekstBarn": "Fritekst barn",
-  "vedtakstype": "FØRSTEGANGSVEDTAK"
+  "vedtakstype": "FØRSTEGANGSVEDTAK",
+  "kopiMottakere": null
 }
