La til dødsdato på person

--- a/mock_data/behandlinger-behandling/behandling-bid-10.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-10.json5
@@ -323,6 +323,7 @@
       },
       "fnr": "19117220349",
       "foedselsdato": "1972-11-19",
+      "doedsdato": null,
       "statsborgerskap": {
         "kode": "NOR",
         "term": "NORGE"
