--- a/mock_data/behandlinger-behandling/behandling-bid-19.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-19.json5
@@ -619,6 +619,7 @@
       },
       "fnr": "26096522249",
       "foedselsdato": "1965-09-26",
+      "doedsdato": null,
       "statsborgerskap": {
         "kode": "NOR",
         "term": "NORGE"
