--- a/mock_data/behandlinger-behandling/behandling-bid-6.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-6.json5
@@ -23,6 +23,7 @@
         "term": "Mann"
       },
       "foedselsdato": "1966-10-28",
+      "doedsdato": null,
       "erEgenAnsatt": true,
       "familiemedlemmer": [
         {
