--- a/mock_data/behandlinger-behandling/behandling-bid-8.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-8.json5
@@ -21,6 +21,7 @@
         "term": "Mann"
       },
       "foedselsdato": "1988-01-19",
+      "doedsdato": "2022-08-25",
       "personStatus": {
         "kode": "BOSA",
         "term": "Bosatt"
