--- a/mock_data/behandlinger-behandling/behandling-bid-17.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-17.json5
@@ -619,6 +619,7 @@
       },
       "fnr": "19117220349",
       "foedselsdato": "1972-11-19",
+      "doedsdato": null,
       "statsborgerskap": {
         "kode": "NOR",
         "term": "NORGE"
