--- a/mock_data/behandlinger-behandling/behandling-bid-9.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-9.json5
@@ -23,6 +23,7 @@
         "term": "Kvinne"
       },
       "foedselsdato": "1978-11-17",
+      "doedsdato": null,
       "erEgenAnsatt": true,
       "familiemedlemmer": [
         {
