Utvidet personopplysninger med foedestedOgLand

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-10.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-10.json5
@@ -8,7 +8,11 @@
           "landkode": "IT"
         }
       ],
-      "medfolgendeFamilie": []
+      "medfolgendeFamilie": [],
+      "foedestedOgLand": {
+        "foedested": "Drammen",
+        "foedeland": "NO"
+      }
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
