--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -28,6 +28,10 @@
         }
       ],
       "medfolgendeFamilie": [],
+      "foedestedOgLand": {
+        "foedested": "Drammen",
+        "foedeland": "NO"
+      }
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
