--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -15,7 +15,11 @@
           "navn": "BRÅKETE GYNGEHEST",
           "relasjonsrolle": "BARN"
         }
-      ]
+      ],
+      "foedestedOgLand": {
+        "foedested": "Drammen",
+        "foedeland": "NO"
+      },
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
