--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
@@ -27,7 +27,11 @@
           "navn": "UTVIKLER OPTIMISTISK",
           "relasjonsrolle": "EKTEFELLE_SAMBOER"
         }
-      ]
+      ],
+      "foedestedOgLand": {
+        "foedested": "Drammen",
+        "foedeland": "NO"
+      }
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
