--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -137,7 +137,11 @@
           "landkode": "DK"
         }
       ],
-      "medfolgendeFamilie": []
+      "medfolgendeFamilie": [],
+      "foedestedOgLand": {
+        "foedested": "Drammen",
+        "foedeland": "NO"
+      }
     },
     "soeknadsland": {
       "landkoder": [
