--- a/mock_data/fagsaker-kontaktopplysninger/post/kontaktopplysninger-post.json5
+++ b/mock_data/fagsaker-kontaktopplysninger/post/kontaktopplysninger-post.json5
@@ -1,4 +1,5 @@
 {
   "kontaktnavn": "GLITRENDE HATT",
-  "kontaktorgnr": "810072512"
+  "kontaktorgnr": "810072512",
+  "kontakttlf": "910099035"
 }
