FødestedOgLand kan være null, men feltene dens må være utfylt om ikke

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -16,10 +16,7 @@
           "relasjonsrolle": "BARN"
         }
       ],
-      "foedestedOgLand": {
-        "foedested": "Drammen",
-        "foedeland": "NO"
-      },
+      "foedestedOgLand": null,
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
