Rettet opp i feil null-verdier av fødelandOgSted

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -4,10 +4,7 @@
     "personOpplysninger": {
       "utenlandskIdent": [],
       "medfolgendeFamilie": [],
-      "foedestedOgLand": {
-        "foedested": null,
-        "foedeland": null
-      },
+      "foedestedOgLand": null,
     },
     "arbeidPaaLand": {
       "fysiskeArbeidssteder": [
