Legger til innvilgelseFritekst i behandlingsresultat

--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-10.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-10.json5
@@ -1,6 +1,7 @@
 {
   "begrunnelseKoder": ["OPPHOLD_UTL_AVLYST"],
   "begrunnelseFritekst": null,
+  "innledningFritekst" : null,
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
   "utfallRegistreringUnntak": null,
