--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-16.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-16.json5
@@ -1,5 +1,6 @@
 {
   "begrunnelseKoder" : [],
+  "innledningFritekst" : null,
   "begrunnelseFritekst" : null,
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
