--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-3.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-3.json5
@@ -1,6 +1,7 @@
 {
   "begrunnelseKoder" : ["ANNET"],
   "begrunnelseFritekst" : "Brukeren har fått flyskrekk",
+  "innledningFritekst" : "Brukeren har fått flyskrekk",
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
   "utfallRegistreringUnntak": "GODKJENT",
