--- a/mock_data/behandlinger-resultat/behandlingsresultat-bid-15.json5
+++ b/mock_data/behandlinger-resultat/behandlingsresultat-bid-15.json5
@@ -1,6 +1,7 @@
 {
   "begrunnelseKoder" : [],
   "begrunnelseFritekst" : null,
+  "innledningFritekst" : null,
   "behandlingsresultatTypeKode": "IKKE_FASTSATT",
   "kontrollresultatBegrunnelseKoder": [],
   "utfallRegistreringUnntak": null,
