Fnr for medfolgende barn kan være fødselsdato

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -11,7 +11,7 @@
       "medfolgendeFamilie": [
         {
           "uuid": "416c97d5-fd1d-4eff-952c-edc42aeb40a0",
-          "fnr": null,
+          "fnr": "14.07.2020",
           "navn": "BRÅKETE GYNGEHEST",
           "relasjonsrolle": "BARN"
         }
