Felles format på fritekstvariabler

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-ftrl-post.json5
@@ -1,9 +1,9 @@
 {
   "behandlingsresultatTypeKode": "FASTSATT_LOVVALGSLAND",
-  "fritekstInnledning": "Fritekst innledning",
-  "fritekstBegrunnelse": "Fritekst begrunnelse",
-  "fritekstEktefelle": "Fritekst ektefelle",
-  "fritekstBarn": "Fritekst barn",
+  "innledningFritekst": "Fritekst innledning",
+  "begrunnelseFritekst": "Fritekst begrunnelse",
+  "ektefelleFritekst": "Fritekst ektefelle",
+  "barnFritekst": "Fritekst barn",
   "vedtakstype": "FØRSTEGANGSVEDTAK",
   "kopiMottakere": null
 }
