Endret aktoerrolle i kodeverk, oppdatert verdi her for å gjenspeile

--- a/mock_data/dokumenter-v2-mulige-mottakere/mulige-mottakere-ftrl-innvilgelse.json5
+++ b/mock_data/dokumenter-v2-mulige-mottakere/mulige-mottakere-ftrl-innvilgelse.json5
@@ -33,7 +33,7 @@
     {
       "mottakerNavn": "Skatteetaten",
       "dokumentNavn": "Kopi til Skatteetaten",
-      "rolle": "MYNDIGHET",
+      "rolle": "TRYGDEMYNDIGHET",
       "orgnr": null,
       "aktørId": null
     }
