--- a/mock_data/fagsaker-aktoerer/aktoer-snr-2.json5
+++ b/mock_data/fagsaker-aktoerer/aktoer-snr-2.json5
@@ -32,7 +32,7 @@
     "orgnr": "810072512",
     "utenlandskPersonID": null,
     "institusjonsID": "FR:RG75V00002",
-    "rolleKode": "MYNDIGHET",
+    "rolleKode": "TRYGDEMYNDIGHET",
     "representererKode": "BRUKER"
   }
 ]
