--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-trygdeavtale-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-trygdeavtale-post.json5
@@ -6,5 +6,5 @@
   "barnFritekst": "Fritekst barn",
   "vedtakstype": "FØRSTEGANGSVEDTAK",
   "kopiMottakere": null,
-  "revurderBegrunnelse": null
+  "revurderBegrunnelse": "FEIL_I_BEHANDLING"
 }
