Navneendring fra revurderBegrunnelse til nyVurderingBakgrunn

--- a/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-eos-post.json5
+++ b/mock_data/saksflyt-vedtak-fatt/post/saksflyt-vedtak-fatt-eos-post.json5
@@ -5,6 +5,6 @@
   "mottakerinstitusjoner": [
     "NO:NAVT003"
   ],
-  "revurderBegrunnelse": "Begrunnelse",
+  "nyVurderingBakgrunn": "FEIL_I_BEHANDLING",
   "vedtakstype": "KORRIGERT_VEDTAK"
 }
