Lagt til schema for endre behandling

--- a/mock_data/behandlinger-status/muligebehandlingsstatuser-bid-4.json5
+++ b/mock_data/behandlinger-status/muligebehandlingsstatuser-bid-4.json5
@@ -1,5 +1,9 @@
 [
   {
+    "kode": "OPPRETTET",
+    "term": "Behandlingen er opprettet"
+  },
+  {
     "kode": "AVVENT_DOK_UTL",
     "term": "Avventer svar fra utenlandsk trygdemyndighet"
   },
