--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -30,6 +30,7 @@
             "postnummer": "1234",
             "poststed": "Poststedet",
             "landkode": "DE",
+            "coAdressenavn": "C/O Ole Duck"
           },
           "virksomhetNavn": "EQUINOR",
         },
@@ -51,7 +52,8 @@
           "postboks": null,
           "postnummer": "3388",
           "poststed": "Berlin",
-          "landkode": "DE"
+          "landkode": "DE",
+          "coAdressenavn": "C/O Ole Duck"
         }
       }
     ],
@@ -78,7 +80,8 @@
         "postboks": null,
         "postnummer": "12345",
         "poststed": "Poststeder",
-        "landkode": "DE"
+        "landkode": "DE",
+        "coAdressenavn": "C/O Ole Duck"
       }
     },
     "selvstendigArbeid": {
