--- a/mock_data/behandlinger-behandling/behandling-bid-6.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-6.json5
@@ -183,7 +183,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck"
             }
           },
           "periode": {
@@ -200,7 +201,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck"
             }
           },
           "periode": {
@@ -217,7 +219,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck"
             }
           },
           "periode": {
