--- a/mock_data/behandlinger-behandling/behandling-bid-8.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-8.json5
@@ -140,7 +140,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck",
             }
           },
           "periode": {
@@ -157,7 +158,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck",
             }
           },
           "periode": {
@@ -174,7 +176,8 @@
               "region": null,
               "postnummer": "0557",
               "poststed": "OSLO",
-              "landkode": "NO"
+              "landkode": "NO",
+              "coAdressenavn": "C/O Ole Duck",
             }
           },
           "periode": {
