--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -33,6 +33,7 @@
             "postnummer": "1234",
             "poststed": "Poststedet",
             "landkode": "DE",
+            "coAdressenavn": "C/O Ole Duck"
           },
           "virksomhetNavn": "EQUINOR",
         },
@@ -54,7 +55,8 @@
           "postboks": null,
           "postnummer": "3388",
           "poststed": "Berlin",
-          "landkode": "DE"
+          "landkode": "DE",
+          "coAdressenavn": "C/O Ole Duck"
         }
       }
     ],
@@ -81,7 +83,8 @@
         "region": "St.Hanshaugen Distrikt",
         "postnummer": "12345",
         "poststed": "Poststeder",
-        "landkode": "DE"
+        "landkode": "DE",
+        "coAdressenavn": "C/O Ole Duck"
       }
     },
     "selvstendigArbeid": {
