Legger til behandlingsresultattype i oppsummering
MELOSYS-4815

--- a/mock_data/behandlinger-behandling/behandling-bid-4.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-4.json5
@@ -824,6 +824,10 @@
     "behandlingstype": {
       "kode": "SOEKNAD",
       "term": "Søknad"
-    }
+    },
+    "behandlingsresultattype": {
+      kode: "FERDIGBEHANDLET",
+      term: "Ferdigbehandlet"
+    },
   }
 }
