--- a/mock_data/behandlinger-behandling/behandling-bid-11.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-11.json5
@@ -790,6 +790,10 @@
     "behandlingsfrist": "2018-09-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
-    "endretAvNavn": "HATT GLITRENDE"
+    "endretAvNavn": "HATT GLITRENDE",
+    "behandlingsresultattype": {
+      "kode": "IKKE_FASTSATT",
+      "term": "Ikke fastsatt"
+    }
   }
 }
