--- a/mock_data/behandlinger-behandling/behandling-bid-2.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-2.json5
@@ -824,6 +824,10 @@
     "behandlingstype": {
       "kode": "SOEKNAD",
       "term": "Søknad"
+    },
+    "behandlingsresultattype": {
+      "kode": "IKKE_FASTSATT",
+      "term": "Ikke fastsatt"
     }
   }
 }
