--- a/mock_data/behandlinger-behandling/behandling-bid-8.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-8.json5
@@ -373,6 +373,10 @@
     "behandlingsfrist": "2018-09-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-10-02T07:04:35.403Z",
-    "endretAvNavn": "HATT GLITRENDE"
+    "endretAvNavn": "HATT GLITRENDE",
+    "behandlingsresultattype": {
+      "kode": "IKKE_FASTSATT",
+      "term": "Ikke fastsatt"
+    }
   }
 }
