--- a/mock_data/fagsaker-aktoerer/aktoer-snr-2.json5
+++ b/mock_data/fagsaker-aktoerer/aktoer-snr-2.json5
@@ -6,7 +6,7 @@
     "utenlandskPersonID": null,
     "institusjonsID": "NO:NAVT001",
     "rolleKode": "BRUKER",
-    "representererKode": "BRUKER",
+    "representererKode": "BRUKER"
   },
   {
     "databaseID": 5645926106469517,
