Vi kan sende med null i de tilfellene der de ikke er required

--- a/mock_data/journalforing-opprett/post/opprett-post-bruker.json5
+++ b/mock_data/journalforing-opprett/post/opprett-post-bruker.json5
@@ -8,6 +8,7 @@
   "avsenderID": "30098000492",
   "avsenderNavn": "HEST LILLA",
   "brukerID": "30098000492",
+  "virksomhetOrgnr": null,
   "journalpostID": "DOK_321",
   "oppgaveID": "201377338",
   "hoveddokument": {
