--- a/mock_data/journalforing-opprett/post/opprett-post-virksomhet.json5
+++ b/mock_data/journalforing-opprett/post/opprett-post-virksomhet.json5
@@ -8,6 +8,7 @@
   "avsenderID": "111111111",
   "avsenderNavn": "ORGANISASJON BLÅ",
   "virksomhetOrgnr": "111111111",
+  "brukerID": null,
   "journalpostID": "DOK_321",
   "oppgaveID": "201377338",
   "hoveddokument": {
