--- a/mock_data/journalforing-tilordne/post/tilordne-post-bruker.json5
+++ b/mock_data/journalforing-tilordne/post/tilordne-post-bruker.json5
@@ -5,6 +5,7 @@
   "avsenderNavn": "PEN FUL",
   "behandlingstypeKode": "ENDRET_PERIODE",
   "brukerID": "30098000492",
+  "virksomhetOrgnr": null,
   "ingenVurdering": false,
   "journalpostID": "DOK_321",
   "oppgaveID": "177057928",
