--- a/mock_data/journalforing-tilordne/post/tilordne-post-virksomhet.json5
+++ b/mock_data/journalforing-tilordne/post/tilordne-post-virksomhet.json5
@@ -5,6 +5,7 @@
   "avsenderNavn": "ORGANISASJON BLÅ",
   "behandlingstypeKode": "ENDRET_PERIODE",
   "virksomhetOrgnr": "111111111",
+  "brukerID": null,
   "ingenVurdering": false,
   "journalpostID": "DOK_321",
   "oppgaveID": "177057928",
