--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,23 @@
-# EditorConfig helps developers define and maintain
-# consistent coding styles between different editors and IDEs.
-
 root = true
 
 [*]
-end_of_line = lf
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
 insert_final_newline = true
 indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+
+[{*.java, *.kt}]
+ij_java_class_count_to_use_import_on_demand = 5
+ij_java_names_count_to_use_import_on_demand = 3
+ij_continuation_indent_size = 4
+max_line_length = 120
+
+[{.babelrc, .stylelintrc, .eslintrc, jest.config, *.bowerrc, *.jsb3, *.jsb2, *.json}]
+indent_size = 2
+
+[{*.yml, *.yaml}]
 indent_size = 2
 
 [*.md]
