FagsakDto i melosys-api har fått feltet hovedpartRolle

--- a/mock_data/fagsaker/snr-12.json5
+++ b/mock_data/fagsaker/snr-12.json5
@@ -10,5 +10,6 @@
   },
   "registrertDato" : "2018-08-27T07:16:03.273Z",
   "endretDato" : "2018-08-27T07:16:03.273Z",
-  "gsakSaksnummer" : 131063977
+  "gsakSaksnummer" : 131063977,
+  "hovedpartRolle": "BRUKER"
 }
