--- a/mock_data/fagsaker/snr-5.json5
+++ b/mock_data/fagsaker/snr-5.json5
@@ -10,5 +10,6 @@
   },
   "registrertDato": "2018-03-06T12:05:59.031Z",
   "endretDato": null,
-  "gsakSaksnummer" : null
+  "gsakSaksnummer" : null,
+  "hovedpartRolle": "BRUKER"
 }
