--- a/mock_data/fagsaker/snr-7.json5
+++ b/mock_data/fagsaker/snr-7.json5
@@ -10,5 +10,6 @@
   },
   "registrertDato": "2018-03-12T16:23:42.122Z",
   "endretDato": "2018-03-15T16:31:35.845Z",
-  "gsakSaksnummer": null
+  "gsakSaksnummer": null,
+  "hovedpartRolle": "BRUKER"
 }
