--- a/mock_data/fagsaker/snr-8.json5
+++ b/mock_data/fagsaker/snr-8.json5
@@ -10,5 +10,6 @@
   },
   "registrertDato": "2018-10-02T07:04:35.403Z",
   "endretDato": "2018-10-02T07:04:35.403Z",
-  "gsakSaksnummer": null
+  "gsakSaksnummer": null,
+  "hovedpartRolle": "BRUKER"
 }
