--- a/mock_data/fagsaker/snr-11.json5
+++ b/mock_data/fagsaker/snr-11.json5
@@ -10,5 +10,6 @@
   },
   "registrertDato": "2017-10-19T12:31:36.123Z",
   "endretDato": "2017-10-19T12:31:36.123Z",
-  "gsakSaksnummer" : 131063977
+  "gsakSaksnummer" : 131063977,
+  "hovedpartRolle": "BRUKER"
 }
