Glemt endring for journalforing-objektet til oppgaver-oversikt

--- a/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
+++ b/mock_data/oppgaver-oversikt/oppgaver-oversikt.json5
@@ -1,8 +1,8 @@
 {
   "journalforing": [
     {
-      "fnr": "28106600300",
-      "sammensattNavn": "KAKE ARTIG",
+      "hovedpartIdent": "28106600300",
+      "navn": "KAKE ARTIG",
       "oppgaveID": "174464932",
       "journalpostID": "DOK_3789",
       "aktivTil": "2016-01-26",
@@ -11,8 +11,8 @@
       "ansvarligID": "Z991001"
     },
     {
-      "fnr": "30098000492",
-      "sammensattNavn": "GLITRENDE HATT",
+      "hovedpartIdent": "30098000492",
+      "navn": "GLITRENDE HATT",
       "oppgaveID": "174464932",
       "journalpostID": "DOK_9998",
       "aktivTil": "2016-01-26",
@@ -21,8 +21,8 @@
       "ansvarligID": "Z991001"
     },
     {
-      "fnr": "28106600300",
-      "sammensattNavn": "KAKE ARTIG",
+      "hovedpartIdent": "28106600300",
+      "navn": "KAKE ARTIG",
       "oppgaveID": "174464932",
       "journalpostID": "DOK_9999",
       "aktivTil": "2016-01-26",
