--- a/mock_data/journalforing/DOK_9997.json5
+++ b/mock_data/journalforing/DOK_9997.json5
@@ -1,8 +1,8 @@
 {
   "avsenderType": null,
-  "brukerID": "30098000492",
-  "virksomhetOrgnr": null,
-  "avsenderID": "30098000492",
+  "brukerID": null,
+  "virksomhetOrgnr": "999999999",
+  "avsenderID": "999999999",
   "avsenderNavn": "GLITRENDE HATT",
   "erHovedpartAvsender": true,
   "mottattDato": "2018-05-04T15:15:25.622Z",
