--- a/mock_data/journalforing/DOK_9998.json5
+++ b/mock_data/journalforing/DOK_9998.json5
@@ -1,9 +1,10 @@
 {
   "avsenderType": "PERSON",
   "brukerID": "30098000492",
+  "virksomhetOrgnr": null,
   "avsenderID": "30098000492",
   "avsenderNavn": "GLITRENDE HATT",
-  "erBrukerAvsender": true,
+  "erHovedpartAvsender": true,
   "mottattDato": "2018-05-04T15:15:25.622Z",
   "hoveddokument": {
     "dokumentID": "73726173",
